examples/test/testpolicy6281.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6281
  namespace: namespace13
spec:
  podSelector:
    matchLabels:
      key3: value40
      key13: value3
      key39: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value6
          key12: value29
          key18: value11
      podSelector:
        matchLabels:
          key36: value49
          key19: value30
